Fix some padding issues on mobile

--- a/src/web/index.css
+++ b/src/web/index.css
@@ -1,17 +1,6 @@
 body {
   background-color: lightgray;
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    "Open Sans",
-    "Helvetica Neue",
-    sans-serif;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
 
   max-width: 800px;
   margin: 0 auto;
@@ -94,14 +83,15 @@ body {
   background-color: slategray;
   max-width: 400px;
   margin: 0 auto;
-  padding: 1em 1em 3em 1em;
+  padding: 1em 0.5em 3em 0.5em;
   border-radius: 0.5em 0.5em 3em 0.5em;
+  box-shadow: 0 2px 1px grey;
 }
 
 .bevel {
   background-color: darkslategray;
-  padding: 1em 1em 2em 1em;
-  border-radius: 0.5em 0.5em 3em 0.5em;
+  padding: 1em 0.5em 2em 0.5em;
+  border-radius: 0.5em 0.3em 3em 0.3em;
   margin-bottom: 1em;
 }
 
@@ -151,4 +141,13 @@ select {
 
 .chunky-button + .chunky-button {
   margin-left: 0.5em;
+}
+
+h1 {
+  color: black;
+  -webkit-text-fill-color: lightgray;
+  -webkit-text-stroke: 1px black;
+  font-size: 64px;
+  text-align: center;
+  margin: 0.125em 0;
 }
